# BruteSudoku

./: BruteSudoku.pro  CMakeLists.txt  README.md  meson.build
examples/: example-table1.txt
forms/: MainWindow.cpp  MainWindow.h  MainWindow.ui  TimeChartForm.cpp  TimeChartForm.h  TimeChartForm.ui
src/: LinearChartWithAverage.cpp  LinearChartWithAverage.h  SolvingThread.cpp  SolvingThread.h  StdRandom.cpp  StdRandom.h  SudokuErrors.cpp  SudokuErrors.h  SudokuTable.cpp  SudokuTable.h  main.cpp
src/Solvers/: BaseSudokuSolver.cpp  BaseSudokuSolver.h  IterativeSolver.cpp  IterativeSolver.h  RecursiveSolver.cpp  RecursiveSolver.h
